# flower-fml

./: README.md  analysis.py  central_ml.py  centralized.py  client.py  pyproject.toml  results.csv  run.sh  seed.py  server.py  start_experiment.py  test_partition.py  utils.py
analysis/: EDA_Diamonds.ipynb  analysis.py  batch_size.py  client_vs_server_training.py  clients.py  distribution.py  epochs.py  rounds.py
diamondmodel/: dataset.py  evaluate.py  learn.py  loader.py  neural_network.py
logfiles/1/: client_0.csv  client_1.csv  client_2.csv  client_3.csv  client_4.csv  server.csv
logfiles/10/: client_0.csv  client_1.csv  client_2.csv  client_3.csv  client_4.csv  server.csv
logfiles/100/: client_1.csv  client_10.csv  client_12.csv  client_13.csv  client_17.csv  client_18.csv  client_19.csv  client_2.csv  client_21.csv  client_22.csv  client_23.csv  client_4.csv  client_7.csv  client_8.csv  server.csv
logfiles/1000/: client_0.csv  client_1.csv  client_10.csv  client_12.csv  client_13.csv  client_14.csv  client_15.csv  client_16.csv  client_17.csv  client_18.csv  client_19.csv  client_2.csv  client_20.csv  client_21.csv  client_22.csv  client_23.csv  client_24.csv  client_25.csv  client_26.csv  client_27.csv  client_28.csv  client_29.csv  client_3.csv  client_4.csv  client_5.csv  client_6.csv  client_7.csv  client_9.csv  server.csv
logfiles/1001/: client_0.csv  client_1.csv  client_10.csv  client_11.csv  client_12.csv  client_13.csv  client_14.csv  client_15.csv  client_16.csv  client_17.csv  client_18.csv  client_19.csv  server.csv  (+18 more)
tests/: test_partition.py
(+22651 files in other folders)
