[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "advanced_flwr_pytorch"
version = "0.1.0"
description = "Advanced Flower/PyTorch Example"
authors = [
    "The Flower Authors <hello@flower.dev>",
    "Kaushik Amar Das <kaushik.das@iiitg.ac.in>"
]

[tool.poetry.dependencies]
python = "^3.8"
flwr = "^1.0.0"
torch = "^1.12.0"
torchvision = "^0.13.0"
validators = "0.18.2"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
tqdm = "^4.64.1"
